[gd_scene load_steps=3 format=2]

[ext_resource path="res://objects/enemies/IgniteZone.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 72.0

[node name="IgniteZone" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="BurnFrequency" type="Timer" parent="."]
wait_time = 0.25
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="BurnFrequency" to="." method="_on_BurnFrequency_timeout"]
